# flumedb-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  go_offset_notes.md  go_ssb_msgpackhexbytes.txt  search-index.js  settings.html  source-files.js
benches/: bench.rs
db/: gen_offset.js  package-lock.json  package.json  test.offset
flumedb/: all.html  index.html  sidebar-items.js
flumedb/flume_log/: enum.FlumeLogError.html  index.html  sidebar-items.js  struct.Error.html  struct.StreamOpts.html  trait.FlumeLog.html  type.Sequence.html
flumedb/flume_view/: index.html  sidebar-items.js  trait.FlumeView.html
flumedb/go_offset_log/: enum.GoFlumeOffsetLogError.html  fn.read_next.html  fn.read_next_mut.html  index.html  sidebar-items.js  struct.Frame.html  struct.GoOffsetLog.html  struct.GoOffsetLogIter.html  struct.ReadResult.html  trait.BidirIterator.html
flumedb/iter_at_offset/: index.html  sidebar-items.js  trait.IterAtOffset.html
flumedb/log_entry/: index.html  sidebar-items.js  struct.LogEntry.html
flumedb/mem_log/: index.html  sidebar-items.js  struct.MemLog.html
flumedb/offset_log/: enum.FlumeOffsetLogError.html  fn.encode.html  fn.read_next.html  fn.read_next_mut.html  fn.read_prev.html  fn.read_prev_mut.html  fn.validate_entry.html  index.html  sidebar-items.js  struct.Forward.html  struct.Frame.html  struct.OffsetLog.html  struct.OffsetLogIter.html  struct.ReadResult.html  trait.BidirIterator.html
implementors/failure/: trait.Fail.js
src/: file_log.rs  flume_db.rs  flume_log.rs  flume_view.rs  flume_view_sql.rs  flumeview_query.rs  go_offset_log.rs  iter_at_offset.rs  lib.rs  log_entry.rs  main.rs  mem_log.rs  obv.rs  offset_log.rs  push_stream.rs
src/flumedb/: flume_log.rs.html  flume_view.rs.html  go_offset_log.rs.html  iter_at_offset.rs.html  lib.rs.html  log_entry.rs.html  mem_log.rs.html  offset_log.rs.html
test_vecs/one_to_ten/: data  (+1 more)
(+14 files in other folders)
