[package]
name = "flumedb"
version = "0.1.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]

[dependencies]
log = "0.4.6"
bytes = "0.4"
byteorder = "1.2.2"
failure = "0.1.3"
pretty_env_logger = "0.2.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
buffered_offset_reader = "0.6"

[dev-dependencies]
criterion = "0.2.5"
tempfile = "3.0"

[[bench]]
name = "bench"
harness = false
