[package]
name = "flumedb"
version = "0.1.6"
authors = ["Piet Geursen <pietgeursen@gmail.com>", "sean billig <sean.billig@gmail.com"]
edition = "2018"
license = "LGPL-3.0"
description = "Append-only log format used by Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/flumedb-rs"
documentation = "https://docs.rs/flumedb/"
readme = "README.md"
keywords = ["ssb", "scuttlebutt"]

[dependencies]
log = "0.4.8"
bytes = "0.5.3"
byteorder = "1.3.2"
pretty_env_logger = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde_bytes = "0.11.3"
serde_cbor = "0.10.2"
buffered_offset_reader = "0.6.0"
bidir_iter = "0.2.1"
ssb-multiformats = "0.4.1"
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.3.0"
tempfile = "3.1.0"

[[bench]]
name = "bench"
harness = false
